# releasarr

./: .gitignore  Dockerfile  TODO.md  docker-compose.yaml  entrypoint.sh  new_models.py  nginx.conf  pyproject.toml  releasarr.code-workspace  run.sh  supervisord.conf
admin/: manage.py
backend/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: fe212b0a1c9f_.py
backend/src/: app.py  db.py  dependencies.py  logger.py  routes.py  routes_old.py  settings.py
backend/src/application/: domain.py  models.py  schemas.py
backend/src/application/interfaces/: release_searcher.py  releases_repository.py  series_service.py  torrent_client.py  tvdb_client.py
backend/src/application/utility/: release_files_matchings_autocompleter.py  task_scheduler.py
backend/src/infrastructure/: db_manager.py  models.py  series_manager.py  tvdb_client.py
backend/src/infrastructure/api_clients/: prowlarr.py  qbittorrent.py  sonarr.py  tvdb.py
backend/src/infrastructure/queries/: get_show.py  list_logs.py  list_shows.py
backend/src/infrastructure/repositories/: releases.py  shows.py
backend/templates/: base.html  index.html  logs.html  requests.html  show.html
backend_new/: docker-compose.yaml  pyproject.toml
backend_new/app/: db.py  settings.py
backend_new/app/prowlarr/: __init__.py  models.py
backend_new/app/sonarr/: client.py  models.py  schemas.py  sync_missing_series.py
backend_new/app/torrent/: models.py
backend_new/app/tvdb/: __init__.py  client.py  models.py  schemas.py
backend_new/migrations/: README.md  env.py
backend_new/migrations/versions/: 242216254861_.py
backend_new/src/: cli.py  models.py
backend_new/src/apps/prowlarr/: models.py  schemas.py
backend_new/src/apps/sonarr/: __init__.py  models.py  sync_missing_series.py
backend_new/src/apps/torrent/: models.py
backend_new/src/db/: core.py  types.py
backend_new/tests/: test_alembic.py
(+118 files in other folders)
