[project]
name = "releasarr-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "sqlmodel>=0.0.22",
    "torrentool>=1.2.0",
]

[dependency-groups]
db-migrations = [
    "alembic>=1.14.1",
]
lint = [
    "ruff>=0.9.7",
]
